      bzr.exe, installed to ``C:\Program Files\Bazaar\plugins`` directory, 
      and standalone installer allows user to skip installation of this plugin.
      (Alexander Belchenko)
 
    * Restore auto-detection of plink.exe on Windows. (Dmitry Vasiliev)

  FEATURES:

  IMPROVEMENTS:

  BUGFIXES:

    * Disable plink's interactive prompt for password.
      (#107593, Dmitry Vasiliev)

    * Include quick-start-summary.svg file to python-based installer(s)
      for Windows. (#192924, Alexander Belchenko)

    * ``merge --preview`` now works for merges that add or modify
      symlinks (James Henstridge)

  API BREAKS:

    * Support for loading plugins from zip files and
      ``bzrlib.plugin.load_from_zip()`` function are deprecated.
      (Alexander Belchenko)

  TESTING:

  INTERNALS:

    * New module ``tools/package_mf.py`` provide custom module finder for
      python packages (improves standard python library's modulefinder.py)
      used by ``setup.py`` script while building standalone bzr.exe.
      (Alexander Belchenko)

    * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
      detecting external lookup support on remote repositories. This method is
      now attempted first when lookup up repositories, leading to an extra 
      round trip on older bzr smart servers. (Robert Collins)
 
    * Repository formats have a new supported-feature attribute
      ``supports_external_lookups`` used to indicate repositories which support
      falling back to other repositories when they have partial data.
      (Robert Collins)

    * The bzrdir format registry now accepts an ``alias`` keyword to
      register_metadir, used to indicate that a format name is an alias for
      some other format and thus should not be reported when describing the
      format. (Robert Collins)


bzr 1.2rc1 (not released yet)
-----------------------------

  NOTES WHEN UPGRADING:
  