@@ -40,6 +40,10 @@ IN DEVELOPMENT
     * Disable plink's interactive prompt for password.
       (#107593, Dmitry Vasiliev)
 
+    * Encode recipient and subject line from unicode to user_encoding before
+      invoking external mail client (e.g. Thunderbird) in `bzr send` command
+      on Windows. (#139318, Alexander Belchenko)
+
     * Include quick-start-summary.svg file to python-based installer(s)
       for Windows. (#192924, Alexander Belchenko)
 
